--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-user-identity": "^1.5.2",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
