--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "firebase": "^9.6.11",
+    "i18next": "^22.5.0",
     "lottie-ios": "3.4.0",
     "lottie-react-native": "^5.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.44.3",
+    "react-i18next": "^12.3.1",
     "react-native": "0.70.8",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "react-native-user-identity": "^1.5.2",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
